--- a/react-bootstrap-usage/index.html
+++ b/react-bootstrap-usage/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta http-equiv="X-UA-Compatible" 
+    content="IE=edge">
+  <meta name="viewport" 
+    content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./index.css">
+  <title>React-bootstrap Guide</title>
 </head>
 <body>
   <div class="heading">How to set-up React-bootstrap in your React.js Project</div>
