--- a/react-bootstrap-usage/index.html
+++ b/react-bootstrap-usage/index.html
@@ -10,8 +10,26 @@
   <title>React-bootstrap Guide</title>
 </head>
 <body>
-  <div class="heading">How to set-up React-bootstrap in your React.js Project</div>
-  <div class="hero"></div>
+  <div class="heading">
+    How to set-up React-bootstrap in your React.js Project
+  </div>
+  <div class="hero">
+    <p class="step">
+      Step 1: command to install
+    </p>
+    <p class="step-content">
+      npm install react-bootstrap bootstrap
+    </p>
+    <p class="step">
+      Step 2: import react-bootstrap into your App.js file
+    </p>
+    <p class="step-content">
+    import 'bootstrap/dist/css/bootstrap.min.css';
+    </p>
+    <p class="step-ref">
+      <i> <a href="https://react-bootstrap.github.io/getting-started/introduction">React-bootstrap documentation --></a></i>
+    </p>
+  </div>
   <div class="footer"></div>
 </body>
 </html>
