--- a/react-bootstrap-usage/index.html
+++ b/react-bootstrap-usage/index.html
@@ -6,6 +6,7 @@
     content="IE=edge">
   <meta name="viewport" 
     content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./index.css">
   <title>React-bootstrap Guide</title>
 </head>
@@ -14,9 +15,9 @@
     How to set-up React-bootstrap in your React.js Project
   </div>
   <div class="hero">
-    <p class="step">
+    <div class="step">
       Step 1: command to install
-    </p>
+    </div>
     <p class="step-content">
       npm install react-bootstrap bootstrap
     </p>
@@ -31,5 +32,20 @@
     </p>
   </div>
   <div class="footer"></div>
+  <div class="container text-center">
+    <div class="row">
+      <div class="col">hi</div>
+      <div class="col">dgrd</div>
+    </div>
+    <div class="row">
+      <div class="col">hi</div>
+      <div class="col">dgrd</div>
+    </div>
+  </div>
+  
+
+
+
+  <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
