--- a/react-bootstrap-usage/index.html
+++ b/react-bootstrap-usage/index.html
@@ -12,34 +12,39 @@
 </head>
 <body>
   <div class="heading">
-    How to set-up React-bootstrap in your React.js Project
+    <h1>How to set-up React-bootstrap in your React.js Project</h1>
   </div>
   <div class="hero">
-    <div class="step">
-      Step 1: command to install
-    </div>
-    <p class="step-content">
-      npm install react-bootstrap bootstrap
-    </p>
-    <p class="step">
-      Step 2: import react-bootstrap into your App.js file
-    </p>
-    <p class="step-content">
-    import 'bootstrap/dist/css/bootstrap.min.css';
-    </p>
+    
+    
+  </div>
+  <div class="footer">
     <p class="step-ref">
       <i> <a href="https://react-bootstrap.github.io/getting-started/introduction">React-bootstrap documentation --></a></i>
     </p>
   </div>
-  <div class="footer"></div>
-  <div class="container text-center">
-    <div class="row">
-      <div class="col">hi</div>
-      <div class="col">dgrd</div>
+  <div class="container-fluid text-start">
+    <div class="row pb-5">
+      <div class="col-9"></div>
+      <div class="col-3">
+        <div class="step">
+          Step 1: command to install
+        </div>
+        <p class="step-content">
+          npm install react-bootstrap bootstrap
+        </p>
+      </div>
     </div>
     <div class="row">
-      <div class="col">hi</div>
-      <div class="col">dgrd</div>
+      <div class="col-4">
+        <p class="step">
+          Step 2: import react-bootstrap into your App.js file
+        </p>
+        <p class="step-content">
+          import 'bootstrap/dist/css/bootstrap.min.css';
+        </p>
+      </div>
+      <div class="col-8"></div>
     </div>
   </div>
   
