--- a/react-bootstrap-usage/index.html
+++ b/react-bootstrap-usage/index.html
@@ -25,12 +25,14 @@
   </div>
   <div class="container-fluid text-start">
     <div class="row pb-5">
-      <div class="col-9"></div>
+      <div class="col-9">
+        <div class="arrow"></div>
+      </div>
       <div class="col-3">
         <div class="step">
           Step 1: command to install
         </div>
-        <p class="step-content">
+        <p class="step-content" id="npm">
           npm install react-bootstrap bootstrap
         </p>
       </div>
@@ -52,5 +54,7 @@
 
 
   <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="./index.js">
+  </script>
 </body>
 </html>
