--- a/react-bootstrap-usage/index.html
+++ b/react-bootstrap-usage/index.html
@@ -11,7 +11,7 @@
   <title>React-bootstrap Guide</title>
 </head>
 <body>
-  <div class="heading">
+  <div class="heading text-center">
     <h1>How to set-up React-bootstrap in your React.js Project</h1>
   </div>
   <div class="hero">
