--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="section-1">
     <div class="container">
       <p>Welcome to GuidopediA</p>
-      <input type="search" id="myInput" onkeyup="seachGuide()" placeholder="React-guide">
+      <input type="search" id="myInput" onkeyup="seachGuide()" placeholder="React-guide" autofocus>
       <ul id="myGuides">
         <li>
           <a href="./react-bootstrap-usage/react-bootstrap-usage.html">React</a>
