--- a/react-bootstrap-usage/react-bootstrap-usage.html
+++ b/react-bootstrap-usage/react-bootstrap-usage.html
@@ -7,7 +7,7 @@
   <meta name="viewport" 
     content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./react-bootstrap-usageFF.css">
+    <link rel="stylesheet" href="./react-bootstrap-usage.css">
   <title>React-bootstrap Guide</title>
 </head>
 <body>
