--- a/base/index.html
+++ b/base/index.html
@@ -17,7 +17,7 @@
       <input type="search" id="myInput" onkeyup="seachGuide()" placeholder="React-guide" autofocus>
       <ul id="myGuides">
         <li>
-          <a href="./react-bootstrap-usage/react-bootstrap-usage.html">React</a>
+          <a href="../react-bootstrap-usage/react-bootstrap-usage.html">React</a>
         </li>
         <li>
           <a href="#">JavaScript</a>
