--- a/base/index.html
+++ b/base/index.html
@@ -28,7 +28,7 @@
         <li>
           <a href="#">Python</a>
         </li>
-        <li><a href="#">Random</a></li>
+        <li><a href="../HTML_CrashCourse/hcc.html">HTML</a></li>
     </ul>
     </div>
   </div>
