--- a/base/index.html
+++ b/base/index.html
@@ -26,6 +26,9 @@
           <a href="#">Java</a>
         </li>
         <li>
+          <a href="#">TypeScript</a>
+        </li>
+        <li>
           <a href="#">Python</a>
         </li>
         <li><a href="../HTML_CrashCourse/hcc.html">HTML</a></li>
