--- a/base/HTML_CrashCourse/hcc.html
+++ b/base/HTML_CrashCourse/hcc.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Crash Course</title>
-  <link rel="icon" type="image/x-icon" href="../imgs/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./imgs/favicon.ico">
   <link rel="stylesheet" href="hcc.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="header">
-    <p>This Codechini's HTML crash course</p>
+    <p>Codechini's HTML crash course</p>
   </div>
 </body>
 </html>
