--- a/base/HTML_CrashCourse/hcc.html
+++ b/base/HTML_CrashCourse/hcc.html
@@ -14,5 +14,23 @@
   <div class="header">
     <p>Codechini's HTML crash course</p>
   </div>
+
+  <main id="mainContainer">
+    <section>
+      <div class="container">
+        <div class="row">Lorem ipsum dolor sit, amet consectetur adipisicing.</div>
+        <div class="row">b</div>
+      </div>
+    </section>
+    <section>
+      <div class="container">hello</div>
+    </section>
+  </main>
+
+  <div class="footer">
+    <div class="container">
+      <p>Made with ❤ by <a href="https://codechini.netlify.app/" target="_blank">Codechini</a></p>
+    </div>
+  </div>
 </body>
 </html>
