--- a/base/HTML_CrashCourse/hcc.html
+++ b/base/HTML_CrashCourse/hcc.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@1,200&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <div class="header">
     <p>Codechini's HTML crash course</p>
@@ -18,12 +20,19 @@
   <main id="mainContainer">
     <section>
       <div class="container">
-        <div class="row">Lorem ipsum dolor sit, amet consectetur adipisicing.</div>
-        <div class="row">b</div>
+        <div class="row">
+          <h1>What is HTML</h1>
+        </div>
+        <div class="row">
+          <h3>HTML is a markup language which is used to structure content on a webpage</h3>
+        </div>
       </div>
     </section>
     <section>
-      <div class="container">hello</div>
+      <div class="container">
+        <div class="row">1</div>
+        <div class="row">2</div>
+      </div>
     </section>
   </main>
 
@@ -33,4 +42,5 @@
     </div>
   </div>
 </body>
+
 </html>
